@@ -48,6 +48,10 @@ bgeneratereads [OPTIONS]
 	<paired end length>
 	<number of reads>
 
+bgeterrordistribution [OPTIONS]
+	<BFAST reported file>
+	<output id>
+
 bheader [OPTIONS]
 	<input file>
 
